[project]
name = "learning-program"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datetime>=5.5",
    "matplotlib>=3.10.5",
    "openai>=1.101.0",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "streamlit>=1.47.1",
    "duckdb>=1.0.0",
    "anthropic>=0.25.0",
]
